# Goofy

./: CMakeLists.txt  init.sh  pkg.config
cli/: cover  gcovr
src/: CMakeLists.txt
src/util/: ncGuid.cpp  ncGuid.h  ncLog.cpp  ncLog.h
test/: CMakeLists.txt
